# questtttcity

./: .gitignore  CLOUD_CONNECTION_REPORT.md  DATABASE_FIX_REPORT.md  FINAL_SUCCESS_REPORT.md  FINAL_SYNC_REPORT.md  FINAL_TESTING_REPORT.md  QUEST_ADMIN_SYSTEM_IMPLEMENTATION_REPORT.md  QUEST_ADMIN_SYSTEM_README.md  QUEST_API_COMMANDS.md  README.md  README_CONNECTION.md  TECHNICAL_REQUIREMENTS.md  TESTING_GUIDE.md  add_minimal_user_columns.py  add_missing_columns.py  add_missing_profile_columns.py  add_missing_user_columns.py  add_review_id_back.py  add_review_id_column.py  add_test_quest_data.py  apply_database_fix.py  check_activity_structure.py  check_admin_profile.py  check_admin_user.py  check_all_id_columns.py  check_and_fix_admin.py  check_current_state.py  check_current_user_structure.py  check_database_data.py  check_db_after_migrations.py  check_db_tables.py  check_duplicates.py  check_foreign_keys.py  check_grouptype_enum.py  check_integer_id_tables.py  check_local_database.py  check_local_point_tables.py  check_migrations.py  check_point_related_tables.py  check_point_structure.py  (+141 more)
backups/questcity-backend-backup-20250908_114522/: .admin_token  .pre-commit-config.yaml  API_CHANGES_REPORT.md  BASE64_FIX.md  BASE64_UPDATE_FIX_REPORT.md  BUILD_POINTS_UPDATE_FIX_REPORT.md  CASCADE_DELETE_FIX.md  COMPLETED_TASKS.md  COMPREHENSIVE_API_TESTING_REPORT.md  DELETE_QUEST_FIX_REPORT.md  FRONTEND_BUILD_FIX_REPORT.md  FRONTEND_PREFILL_FIX_REPORT.md  FRONTEND_QUEST_FIX_REPORT.md  HIGH_015_COMPLETION_REPORT.md  MANUAL_DELETE_APPROACH.md  README_EMULATOR.md  STATE_CAST_ERROR_FIX_REPORT.md  UPDATE_QUEST_STATE_FIX_REPORT.md  add_test_data.py  change_testuser_role.py  check_activity_table.py  check_all_users.py  check_and_create_activity.py  check_constraints.py  check_enum_values.py  check_fastapi_config.py  check_full_quest_structure.py  check_migrations.py  check_quest_77.py  check_quest_db.py  check_quest_table_structure.py  check_quest_test66.py  check_questcity_db.py  check_quests.py  check_quests_in_db.py  check_tables.py  check_test_db.py  check_testuser_password.py  check_user.py  check_user_data.py  (+57 more)
backups/questcity-backend-backup-20250908_114522/certs/: jwt-private.pem
backups/questcity-backend-backup-20250908_114522/deploy/: .env.production  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile  README.md  README_MIGRATION.md  TIMEWEB_STEP_BY_STEP.md  check_data.py  check_quest_count.py  checklist.md  create_proper_backup.py  db_backup_proper_20250827_010710.sql  deploy.sh  env.production.example  import_data.py  migrate_db.sh  migrate_db_python.py  nginx.conf  nginx_updated.conf  requirements.txt  setup-ssl.sh  simple_check.py  timeweb-deployment.yml
backups/questcity-backend-backup-20250908_114522/dev/: Taskfile.yml  docker-compose.yml
backups/questcity-backend-backup-20250908_114522/docs/: 02_PROJECT_ROADMAP.md  (+10 more)
questcity-backend/dev/: Dockerfile  pyproject.toml
(+1029 files in other folders)
